Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.4.0 FF
-
Fix Version/s: 6.3.1, 6.4.0 Beta1
-
Component/s: Build tools: qdoc
-
Labels:None
-
Commits:09dd127f67 (qt/qttools/dev) a31108213d (qt/qttools/6.3) a31108213d (qt/tqtc-qttools/6.3) 09dd127f67 (qt/tqtc-qttools/dev) a31108213d (qt/qttools/6.3.1)
-
Sprint:DaVinci sprint 53
Description
Repeater { model: PdfLinkModel { id: linkModel document: root.document page: image.currentPage }
Apparently that's enough to trigger it in the case of https://codereview.qt-project.org/c/qt/qtwebengine/+/395278/9 : docs were added in qpdflinkmodel.cpp in https://codereview.qt-project.org/c/qt/qtwebengine/+/286972 ; now I merely want to document the API that PdfMultiPageView.qml is providing. This warning makes no sense:
warning: QML property documented multiple times: 'PdfDocument PdfLinkModel::document
Of course maybe I misunderstood where that warning is coming from, because qdoc doesn't even output the "multiple locations" where it thinks it found "docs" even though there are no actual multiple docs.